--- a/starter-code/public/index.html
+++ b/starter-code/public/index.html
@@ -58,7 +58,7 @@
 
     <!-- Secon Screen -->
 
-    <!-- <div id="battle-screen">
+    <div id="battle-screen active">
       <div class="fight-btn">
         fight
       </div>
@@ -123,7 +123,7 @@
           />
         </div>
       </div>
-    </div> -->
+    </div>
     <script src="/js/components/vendor.js"></script>
     <script src="/js/components/regularJS.js"></script>
   </body>
