--- a/starter-code/public/index.html
+++ b/starter-code/public/index.html
@@ -58,7 +58,7 @@
 
     <!-- Secon Screen -->
 
-    <div id="battle-screen active">
+    <div id="battle-screen">
       <div class="fight-btn">
         fight
       </div>
